2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/boot.h (boot_lock_bits_set): Fix a typo: BLB11 needs
	to be programmed (rather than BLB12) in order to prevent the
	application from overwriting the boot loader section.
	Closes bug #18115: online documentation typo/bug avr/boot.h

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Document that malloc() is no longer needed for
	floating-point conversions as it once used to be.
	Closes bug #18688: vfscanf and vfprintf don't use malloc

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix broken seeding of the PRNGs when seeding with 0.
	This fix is courtesy Andrew Chernov from the FreeBSD
	project (rev. 1.21 of their random.c).
	* libc/stdlib/random.c (do_random): seed with another (arbitrary) value
	when attempting to seed with 0.
	* libc/stdlib/rand.c (do_rand): (Ditto.)
	Closes bug #18662: rand() keeps returning the same value if seeded with 0

2007-01-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix breakage for strtod() on avr6 architectures caused
	by calling __prologue_saves__.
	Fixes bug #18509: strtod.S crashes due to stack problem with atmega
	2560
	* libm/fplib/strtod.S: pop and restore EIND from the stack before
	calling __prologue_saves__ on 3-byte PC AVR architectures.
	* include/avr/io.h: Provide a value for EIND when compiling the
	library for an avr6 architecture.
	* include/avr/iomxx0_1.h: Protect the EIND definition from appearing
	twice in while compiling the library for an avr6 architecture.

For older changes see ChangeLog-2006