@@ -2,6 +2,7 @@
 
 * Bugs fixed:
 
+  [no-id]  Exclude 64-bit types for -mint8.
   [#18115] online documentation typo/bug avr/boot.h
   [#18385] SPM_PAGESIZE wrong value for ATmega164p and ATmega324p
   [#18509] strtod.S crashes due to stack problem with atmega 2560
